- Implemented: Initial support for RGB driver TRC02
- Fixed: Autobackup
- Fixed: Endianess problems
- Implemented: New 1-Wire system (Thanks to Sebastien!), Kernel users have to transfer old sensors to new ones (device id is swapped in hex)
- Fixed: PiFace hardware port notation
- Fixed: I2C BMP085 hardware port notation
- Updated: Highcharts 3.0.7

Version 1.0.1186 (November 16th 2013)
- Fixed: rain week log, some top legend values did not show on the chart
- Implemented: Counterlog, Week chart, legend values
- Implemented: Room Plan editor, dashboard room selector
- Implemented: Razberry, support for switch only devices (will be reported to controller NodeID)
- Changed: ByronSX now uses the sound type as Unit ID
- Implemented: Option for each timer type to enable 'Randomness'
- Implemented/Changed: Scenes 'Learn' command will now listen to the status (pressing On/Off/Mood)
- Changed: Room Plan editor, now allows to assign devices to multiple rooms
- Implemented: Camera Setup, Streaming Icon
- Implemented: Dashboard/Lights/Scenes now displays a webcam icon when used in a Camera Setup
- Fixed: Creating a virtual device when there where no devices in the system did not work
- Implemented: Room Plan editor, now possible to add Scenes/Groups
- Changed: Lua scripts, now only works when file ends with .lua
- Implemented: Option to enable/disable menu tabs per user
- Implemented: Dim levels in steps of 5%
- Fixed: Notifications (NMA) was not send if the API key contained spaces
- Fixed: Siren Switch type can now be switched on/off
- Changed: Lua example scripts now in UTF8
- Implemented: Solar Radiation for Davis
- Fixed: Enable/disable menus for remote admin users
- Implemented: CM180i, now also displaying total usage
- Implemented: Room Selector now also vissible on mobile devices
- Fixed: Editing (changing the name) of security devices
- Implemented: Added Visibility/Solar Radiation to Lua scripts
- Implemented: Razberry Smoke Alarm