@@ -29,6 +29,7 @@ Version 1.0.xxxx (December xxth 2013)
 - Fixed: PiFace hardware port notation
 - Fixed: I2C BMP085 hardware port notation
 - Updated: Highcharts 3.0.7
+- Implemented: Option to specify On/Off actions for lights/switches (http/script)
 
 Version 1.0.1186 (November 16th 2013)
 - Fixed: rain week log, some top legend values did not show on the chart
